Revert "fixed vertical alignment of search & clear buttons"
This reverts commit 89421fa6ceabb6af926bb8ff162846a05e03eb1e.

--- a/app/assets/stylesheets/species/search.scss
+++ b/app/assets/stylesheets/species/search.scss
@@ -1,5 +1,5 @@
 @mixin search-button($color:#fff, $border: none,
-  $background: #376382, $line-height: 28px) {
+  $background: #376382, $line-height: 30px) {
 
   button {
     cursor: pointer;
@@ -140,7 +140,7 @@
           $color: #376382,
           $border: (1px solid #376382),
           $background: #fff,
-          $line-height: 26px
+          $line-height: 28px
         );
         button:hover { color: #fff; }
       }
